@@ -1,3 +1,7 @@
+2020-10-29 20:05:00
+===================
+Extended User List to display Last Visit
+
 2020-09-15 11:33:00
 ===================
 Fix blocking 5 or more character TLDs in domain
